fixed unreadable font by Safari

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap');
-* {
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500&display=swap');* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Red Hat Display', sans-serif;
 }
 ::-webkit-scrollbar {
     display: none;
